--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,13 @@
-#preview {
-    margin-top: 20px;
-    border-top: 1px solid #ccc;
-    padding-top: 10px;
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease forwards;
 }
